# BookFinder-API

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  MANUAL_TEST.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  prometheus.yml  pyproject.toml  railway.toml  requirements.txt
.cursor/rules/: docker.mdc  python.mdc
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: c35a5f6dc683_initial_users_books_favorites.py
app/: __init__.py  main.py  metrics.py  worker.py
app/api/: __init__.py
app/api/v1/: auth.py  books.py  favorites.py
app/core/: __init__.py  cache.py  config.py  database.py  limiter.py  redis.py  security.py
app/models/: __init__.py  base.py  book.py  favorite.py  user.py
app/schemas/: __init__.py  book.py  favorite.py  token.py  user.py
app/services/: __init__.py  google_books.py
app/tasks/: __init__.py  book_tasks.py
app/tests/: __init__.py  conftest.py  test_auth.py  test_books.py  test_favorites.py  test_health.py
app/utils/: __init__.py  dependencies.py
